Correct home page alignment bug

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -55,7 +55,10 @@
 
     .keyword{
       font-weight: bold;
-      color: #1da1f2; 
+      color: white;
+      background-color: #1da1f2;
+      padding: 5px;
+      border-radius: 5px;
     }
   }
 
